# ci_mpm

./: .gitignore  README.md  constants.py  environment.yml  pyproject.toml  requirements.txt  setup.py
.eggs/setuptools_scm-8.0.4-py3.11.egg/EGG-INFO/: requires.txt
.github/workflows/: flake8.yml  pytest-unit-tests.yml
simple_functions/: __init__.py  cacu_pi.py  constants.py  functions1.py
simple_functions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
simple_functions/simple_functions.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_constants.py  test_simple_functions.py
